Add more content

--- a/cv.tex
+++ b/cv.tex
@@ -74,44 +74,27 @@
 
 \section{Research Experience}
 
-\cventry{March 2014--Sept 2015}{Research Assistant}{Arch Lab @ UCSB}{City}{}{Worked under Professor Tim Sherwood on bringing ideas from Programming Language Theory
-to Computer Architecture. Recent projects have been centered around constructing a small
-trusted computing core.\newline{}%
-Detailed achievements:%
-\begin{itemize}%
-\item Achievement 1;
-\item Achievement 2, with sub-achievements:
-  \begin{itemize}%
-  \item Sub-achievement (a);
-  \item Sub-achievement (b), with sub-sub-achievements (don't do this!);
-    \begin{itemize}
-    \item Sub-sub-achievement i;
-    \item Sub-sub-achievement ii;
-    \item Sub-sub-achievement iii;
-    \end{itemize}
-  \item Sub-achievement (c);
-  \end{itemize}
-\item Achievement 3.
-\end{itemize}}
+\cventry{September 2015 - Present}{Research Assistant}{PLSE at UW}{}{}{Working under Professor Zachary Tatlock on
+verification, programming langauges, and systems building.\newline{}}
 
-\cventry{July 2012--Present}{Research Assistant}{PL Lab @ UCSB}{City}{}{Worked under Professor Ben Hardekopf on multiple projects spanning, abstract interpretation,
-JavaScript optimization, the design of research languages for teaching static analysis
-and programming language theory, and logic guided program generation.\newline{}%
-Detailed achievements:%
+\cventry{March 2014--September 2015}{Research Assistant}{Arch Lab at UCSB}{}{}{Worked under Professor Tim Sherwood on
+applying ideas from Programming Languages to Computer Architecture. Our main project was centered around
+constructing small trusted computing cores.\newline{}}
+
+\cventry{July 2012--September 2015}{Research Assistant}{PL Lab at UCSB}{}{}{Worked under Professor Ben Hardekopf on
+multiple projects over the course of my undergraduate study.\newline{}%
+In particular:%
 \begin{itemize}%
-\item Achievement 1;
-\item Achievement 2, with sub-achievements:
+\item Abstract Interpretation of JavaScript
+\item JavaScript JIT optimization
+\item Research languages for teaching:
   \begin{itemize}%
-  \item Sub-achievement (a);
-  \item Sub-achievement (b), with sub-sub-achievements (don't do this!);
-    \begin{itemize}
-    \item Sub-sub-achievement i;
-    \item Sub-sub-achievement ii;
-    \item Sub-sub-achievement iii;
-    \end{itemize}
-  \item Sub-achievement (c);
+  \item Static Analysis;
+  \item Type Theory;
+  \item Logic Programming;
+  \item Constraint Solving;
   \end{itemize}
-\item Achievement 3.
+\item Using constraint logic programming for program synthesis, and fuzzing.
 \end{itemize}}
 
 \section{Industry Experience}
@@ -120,37 +103,46 @@ Detailed achievements:%
 Worked on the Rust programming language's type system, and its implementation, my
 research was focused on improving type checking \& inference.\newline{}}
 
-% \cventry{June 2013 - September 2014}{Software Engineering Intern & Consultant}{Invoca Inc}{Santa Barbara}{}{
-% Delivered high-value telephony APIs, one project increased API performance by over 40x, using a highly concurrent,
-% distributed, in-memory solution. Led a port of the code base (roughly 300kloc) from Ruby 1.8.7 to Ruby 2.1.2. Helped build a
-% documentation tool for generating API docs from source code. Assisted with modularizing the application data layer to
-% support the evolution of a service oriented architecture.\newline{}}
+\cventry{June 2013 - September 2014}{Software Engineering Intern \& Consultant}{Invoca Inc}{Santa Barbara}{}{
+Delivered high-value
+telephony APIs, one project increased API performance by over 40x, using a highly concurrent, distributed, in-memory solution.
+Led a port of the code base (roughly 300kloc) from Ruby 1.8.7 to Ruby 2.1.2. Helped build a
+documentation tool for generating API docs from source code. Assisted with modularizing the application data layer to
+support the evolution of a service oriented architecture.\newline{}}
 
-% \cventry{May 2011 - January 2013}{Software Developer}{Zentopy Inc}{Santa Barbara}{}{
-%   Architected the storage API layer, designed and implemented front-end UI/UX, ported the
-% native client from Windows to OS X and built a filesystem layer between the web services and
-% storage mechanisms.\newline{}%
-
-% Detailed achievements:
-% \begin{itemize}
-% \item Architected the storage and authentication APIs;
-% \item Designed and implemented the front-end UI/UX;
-% \item Ported the native client from Windows to OS X;
-% \item Constructed a filesystem layer between the web services and storage mechanisms;
-% \end{itemize}
-% }
+\cventry{May 2011 - January 2013}{Software Engineer}{Zentopy Inc}{Santa Barbara}{}{
+\begin{itemize}
+\item Architected the storage and authentication APIs;
+\item Designed and implemented the front-end UI/UX;
+\item Ported the native client from Windows to OS X;
+\item Constructed a filesystem layer between the web services and storage mechanisms;
+\end{itemize}
+}
 
 \section{Teaching}
-\cventry{January 2014--June 2014}{Reader for Programming Languages (CMPSC 162)}{UCSB}{City}{}{Assisted in grading, and designing curriculum for the the undergraduate Programming Languages class at UCSB.\newline{}}
+\cventry{September 2015--December 2015}{Teaching Assistant for Operating Systems (CSE 451)}{UW}{}{}{
+  Assisted in grading, writing exams, and helping students implement the JOS labs from MIT.
+}
+\cventry{January 2015--June 2015}{Reader for Programming Languages (CMPSC 162)}{UCSB}{}{}{
+  Assisted in grading, and designing curriculum for the the undergraduate Programming Languages class at UCSB.\newline{}}
+\cventry{January 2014--June 2014}{Reader for Programming Languages (CMPSC 162)}{UCSB}{}{}{
+  Assisted in grading, and designing curriculum for the the undergraduate Programming Languages class at UCSB.\newline{}}
+\cventry{2012--2014}{Student Colloquium Leader}{College of Creative Studies at UCSB}{}{}{
+  I have co-taught classes in UCSB’s College of Creative Studies.
+  Computer Theorem Proving with Berkeley Churchill (now at Stanford),
+  and Principles of Safe Software with Adelbert Chang (now at Box)
+}
 
 \section{Service}
 \subsection{Journals}
 \cventry{2015-2015}{Journal Reviewer}{ACM TACO}{}{}{Reviewed papers for ACM TACO.}
 
-\section{Interests}
-\cvitem{hobby 1}{Description}
-\cvitem{hobby 2}{Description}
-\cvitem{hobby 3}{Description}
+\section{Talks}
+
+% \section{Interests}
+% \cvitem{hobby 1}{Description}
+% \cvitem{hobby 2}{Description}
+% \cvitem{hobby 3}{Description}
 
 % Publications from a BibTeX file using the multibib package
 % \section{Conference Publications}
