--- a/cv.tex
+++ b/cv.tex
@@ -89,10 +89,10 @@ In particular:%
 \item JavaScript JIT optimization
 \item Research languages for teaching:
   \begin{itemize}%
-  \item Static Analysis;
-  \item Type Theory;
-  \item Logic Programming;
-  \item Constraint Solving;
+  \item Static Analysis
+  \item Type Theory
+  \item Logic Programming
+  \item Constraint Solving
   \end{itemize}
 \item Using constraint logic programming for program synthesis, and fuzzing.
 \end{itemize}}
@@ -112,10 +112,10 @@ support the evolution of a service oriented architecture.\newline{}}
 
 \cventry{May 2011 - January 2013}{Software Engineer}{Zentopy Inc}{Santa Barbara}{}{
 \begin{itemize}
-\item Architected the storage and authentication APIs;
-\item Designed and implemented the front-end UI/UX;
-\item Ported the native client from Windows to OS X;
-\item Constructed a filesystem layer between the web services and storage mechanisms;
+\item Architected the storage and authentication APIs
+\item Designed and implemented the front-end UI/UX
+\item Ported the native client from Windows to OS X
+\item Constructed a filesystem layer between the web services and storage mechanisms
 \end{itemize}
 }
 
