--- a/publications.bib
+++ b/publications.bib
@@ -25,3 +25,43 @@
   year={2015},
   organization={ACM}
 }
+
+@inproceedings{zarf,
+ author = {McMahan, Joseph and Christensen, Michael and Nichols, Lawton and Roesch, Jared and Guo, Sung-Yee and Hardekopf, Ben and Sherwood, Timothy},
+ title = {An Architecture Supporting Formal and Compositional Binary Analysis},
+ booktitle = {Proceedings of the Twenty-Second International Conference on Architectural Support for Programming Languages and Operating Systems},
+ series = {ASPLOS '17},
+ year = {2017},
+ isbn = {978-1-4503-4465-4},
+ location = {Xi'an, China},
+ pages = {177--191},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/3037697.3037733},
+ doi = {10.1145/3037697.3037733},
+ acmid = {3037733},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {assembly analysis, binary verification, formal methods, functional programming, heterogeneous architecture, isa semantics, non-interference, static analysis},
+}
+
+@article{Ebner:2017:MFF:3136534.3110278,
+ author = {Ebner, Gabriel and Ullrich, Sebastian and Roesch, Jared and Avigad, Jeremy and de Moura, Leonardo},
+ title = {A Metaprogramming Framework for Formal Verification},
+ journal = {Proc. ACM Program. Lang.},
+ issue_date = {September 2017},
+ volume = {1},
+ number = {ICFP},
+ month = aug,
+ year = {2017},
+ issn = {2475-1421},
+ pages = {34:1--34:29},
+ articleno = {34},
+ numpages = {29},
+ url = {http://doi.acm.org/10.1145/3110278},
+ doi = {10.1145/3110278},
+ acmid = {3110278},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dependent type theory, metaprogramming, tactic language, theorem proving},
+}
+
