--- a/cv.tex
+++ b/cv.tex
@@ -152,6 +152,10 @@ support the evolution of a service oriented architecture.\newline{}}
 }
 
 \section{Teaching}
+\cventry{September 2017--December 2017}{Teaching Assistant for Graduate Programming Languages (CSE 505)}{UW}{}{}{
+  Designed a brand new version of the course using the Lean proof assistant, and taught with Zachary Tatlock
+  and Leonardo de Moura.
+}
 \cventry{September 2015--December 2015}{Teaching Assistant for Operating Systems (CSE 451)}{UW}{}{}{
   Assisted in grading, writing exams, and helping students implement the JOS labs from MIT.
 }
