--- a/publications.bib
+++ b/publications.bib
@@ -26,6 +26,16 @@
   organization={ACM}
 }
 
+@inproceedings{arch_analysis,
+ author = {McMahan, Joseph and Christensen, Michael and Nichols, Lawton and Roesch, Jared and Guo, Sung-Yee and Hardekopf, Ben and Sherwood, Timothy},
+ title = {An Architecture for Analysis},
+ booktitle = {IEEE Micro: Micro's Top Picks from Computer Architecture Conferences (IEEE Micro - top pick)},
+ series = {ASPLOS '17},
+ month = {May-June},
+ year = {2018},
+ keywords = {assembly analysis, binary verification, formal methods, functional programming, heterogeneous architecture, isa semantics, non-interference, static analysis},
+}
+
 @inproceedings{zarf,
  author = {McMahan, Joseph and Christensen, Michael and Nichols, Lawton and Roesch, Jared and Guo, Sung-Yee and Hardekopf, Ben and Sherwood, Timothy},
  title = {An Architecture Supporting Formal and Compositional Binary Analysis},
