--- a/cv.tex
+++ b/cv.tex
@@ -153,8 +153,8 @@ support the evolution of a service oriented architecture.\newline{}}
 
 \section{Teaching}
 \cventry{September 2017--December 2017}{Teaching Assistant for Graduate Programming Languages (CSE 505)}{UW}{}{}{
-  Designed a brand new version of the course using the Lean proof assistant, and taught with Zachary Tatlock
-  and Leonardo de Moura.
+  Designed a brand new version of University of Washington's graduate programming language course using the Lean proof assistant.
+  I also helped teach the course in conjunction with Zachary Tatlock and Leonardo de Moura.
 }
 \cventry{September 2015--December 2015}{Teaching Assistant for Operating Systems (CSE 451)}{UW}{}{}{
   Assisted in grading, writing exams, and helping students implement the JOS labs from MIT.
@@ -172,6 +172,10 @@ support the evolution of a service oriented architecture.\newline{}}
 \section{Service}
 \subsection{Journals}
 \cventry{2015-2015}{Journal Reviewer}{ACM TACO}{}{}{Reviewed papers for ACM TACO.}
+
+\section{Awards}
+\cventry{2018}{IEEE Micro Top Pick}{}{}{An Architecture for Analysis, a culmination
+of the project I started with my collaborators Joseph McMahan and Tim Sherwood while at UCSB.}
 
 \section{Invited Talks}
 \cventry{September 2017}{White Box Automation}{ITP '17}{}{}{
