--- a/publications.bib
+++ b/publications.bib
@@ -75,3 +75,39 @@
  keywords = {dependent type theory, metaprogramming, tactic language, theorem proving},
 }
 
+@article{Chu:2018:AFA:3236187.3269463,
+ author = {Chu, Shumo and Murphy, Brendan and Roesch, Jared and Cheung, Alvin and Suciu, Dan},
+ title = {Axiomatic Foundations and Algorithms for Deciding Semantic Equivalences of SQL Queries},
+ journal = {Proc. VLDB Endow.},
+ issue_date = {July 2018},
+ volume = {11},
+ number = {11},
+ month = jul,
+ year = {2018},
+ issn = {2150-8097},
+ pages = {1482--1495},
+ numpages = {14},
+ url = {https://doi.org/10.14778/3236187.3236200},
+ doi = {10.14778/3236187.3236200},
+ acmid = {3269463},
+ publisher = {VLDB Endowment},
+}
+
+@inproceedings{Roesch:2018:RNI:3211346.3211348,
+ author = {Roesch, Jared and Lyubomirsky, Steven and Weber, Logan and Pollock, Josh and Kirisame, Marisa and Chen, Tianqi and Tatlock, Zachary},
+ title = {Relay: A New IR for Machine Learning Frameworks},
+ booktitle = {Proceedings of the 2Nd ACM SIGPLAN International Workshop on Machine Learning and Programming Languages},
+ series = {MAPL 2018},
+ year = {2018},
+ isbn = {978-1-4503-5834-7},
+ location = {Philadelphia, PA, USA},
+ pages = {58--68},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/3211346.3211348},
+ doi = {10.1145/3211346.3211348},
+ acmid = {3211348},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {compilers, differentiable programming, intermediate representation, machine learning},
+} 
+
