--- a/publications.bib
+++ b/publications.bib
@@ -1,6 +1,7 @@
 @article{typespec,
   title={Improved type specialization for dynamic scripting languages},
   author={Kedlaya, Madhukar N and Roesch, Jared and Robatmili, Behnam and Reshadi, Mehrdad and Hardekopf, Ben},
+  author+an = {2=highlight},
   journal={ACM SIGPLAN Notices},
   volume={49},
   number={2},
@@ -12,6 +13,7 @@
 @inproceedings{clp_fuzz,
   title={Language fuzzing using constraint logic programming},
   author={Dewey, Kyle and Roesch, Jared and Hardekopf, Ben},
+  author+an = {2=highlight},
   booktitle={Proceedings of the 29th ACM/IEEE international conference on Automated software engineering},
   pages={725--730},
   year={2014},
@@ -21,6 +23,7 @@
 @inproceedings{rust_fuzz,
   title={Fuzzing the Rust Typechecker Using CLP},
   author={Dewey, Kyle and Roesch, Jared and Hardekopf, Ben},
+  author+an = {2=highlight},
   booktitle={Proceedings of the 30th ACM/IEEE international conference on Automated software engineering},
   year={2015},
   organization={ACM}
@@ -28,6 +31,7 @@
 
 @inproceedings{arch_analysis,
  author = {McMahan, Joseph and Christensen, Michael and Nichols, Lawton and Roesch, Jared and Guo, Sung-Yee and Hardekopf, Ben and Sherwood, Timothy},
+ author+an = {4=highlight},
  title = {An Architecture for Analysis},
  booktitle = {IEEE Micro: Micro's Top Picks from Computer Architecture Conferences (IEEE Micro - top pick)},
  series = {ASPLOS '17},
@@ -38,6 +42,7 @@
 
 @inproceedings{zarf,
  author = {McMahan, Joseph and Christensen, Michael and Nichols, Lawton and Roesch, Jared and Guo, Sung-Yee and Hardekopf, Ben and Sherwood, Timothy},
+ author+an ={4=highlight},
  title = {An Architecture Supporting Formal and Compositional Binary Analysis},
  booktitle = {Proceedings of the Twenty-Second International Conference on Architectural Support for Programming Languages and Operating Systems},
  series = {ASPLOS '17},
@@ -56,6 +61,7 @@
 
 @article{Ebner:2017:MFF:3136534.3110278,
  author = {Ebner, Gabriel and Ullrich, Sebastian and Roesch, Jared and Avigad, Jeremy and de Moura, Leonardo},
+ author+an = {3=highlight},
  title = {A Metaprogramming Framework for Formal Verification},
  journal = {Proc. ACM Program. Lang.},
  issue_date = {September 2017},
@@ -77,6 +83,7 @@
 
 @article{Chu:2018:AFA:3236187.3269463,
  author = {Chu, Shumo and Murphy, Brendan and Roesch, Jared and Cheung, Alvin and Suciu, Dan},
+ author+an = {3=highlight},
  title = {Axiomatic Foundations and Algorithms for Deciding Semantic Equivalences of SQL Queries},
  journal = {Proc. VLDB Endow.},
  issue_date = {July 2018},
@@ -95,6 +102,7 @@
 
 @inproceedings{Roesch:2018:RNI:3211346.3211348,
  author = {Roesch, Jared and Lyubomirsky, Steven and Weber, Logan and Pollock, Josh and Kirisame, Marisa and Chen, Tianqi and Tatlock, Zachary},
+ author+an = {1=highlight},
  title = {Relay: A New IR for Machine Learning Frameworks},
  booktitle = {Proceedings of the 2Nd ACM SIGPLAN International Workshop on Machine Learning and Programming Languages},
  series = {MAPL 2018},
