--- a/cv.tex
+++ b/cv.tex
@@ -132,7 +132,7 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2015--Present}{PhD}{University of Washington}{Seattle, WA}{3rd Year}{}
+\cventry{2015--Present}{PhD}{University of Washington}{Seattle, WA}{5th Year}{}
 \cventry{2010--2015}{B.S. Computer Science - College of Creative Studies}{University of California Santa Barbara}{Santa Barbara, CA}{}{}
 
 % \section{Master thesis}
@@ -147,6 +147,11 @@
 \printbibliography[title=Publications]
 
 \section{Research Experience}
+
+\cventry{July 2019 - Present}{Co-founder}{OctoML}{}{}{
+  Founded a company based on my research working towards bringing human-level automation
+  to machine learning systems. Leading compiler R\&D and product development.
+  Raised approximately 20M in venture captial.\newline{}}
 
 \cventry{July 2017 - October 2017}{Research Intern}{Microsoft Research Redmond}{}{}{
   Working with Leonardo De Moura and Nikhil Swamy on verifying and compiling
