--- a/publications.bib
+++ b/publications.bib
@@ -117,5 +117,65 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {compilers, differentiable programming, intermediate representation, machine learning},
-} 
+}
 
+@article{DBLP:journals/corr/abs-1904-05387,
+  author    = {Eunice Jun and
+               Maureen Daum and
+               Jared Roesch and
+               Sarah E. Chasins and
+               Emery D. Berger and
+               Ren{\'{e}} Just and
+               Katharina Reinecke},
+  author+an = {3=highlight},
+  title     = {Tea: {A} High-level Language and Runtime System for Automating Statistical
+               Analysis},
+  journal   = {CoRR},
+  volume    = {abs/1904.05387},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1904.05387},
+  archivePrefix = {arXiv},
+  eprint    = {1904.05387},
+  timestamp = {Thu, 25 Apr 2019 13:55:01 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1904-05387.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/corr/abs-1807-04188,
+  author    = {Thierry Moreau and
+               Tianqi Chen and
+               Ziheng Jiang and
+               Luis Ceze and
+               Carlos Guestrin and
+               Arvind Krishnamurthy},
+  title     = {{VTA:} An Open Hardware-Software Stack for Deep Learning},
+  journal   = {CoRR},
+  volume    = {abs/1807.04188},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1807.04188},
+  archivePrefix = {arXiv},
+  eprint    = {1807.04188},
+  timestamp = {Mon, 13 Aug 2018 16:46:12 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1807-04188.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{10.1145/3358711.3361625,
+author = {Pollock, Josh and Roesch, Jared and Woos, Doug and Tatlock, Zachary},
+author+an = {2=highlight},
+title = {Theia: Automatically Generating Correct Program State Visualizations},
+year = {2019},
+isbn = {9781450369893},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3358711.3361625},
+doi = {10.1145/3358711.3361625},
+booktitle = {Proceedings of the 2019 ACM SIGPLAN Symposium on SPLASH-E},
+pages = {46–56},
+numpages = {11},
+keywords = {CS2, program visualization, CS1, operational semantics, abstract machine, notional machine},
+location = {Athens, Greece},
+series = {SPLASH-E 2019}
+}
